Major update: Deno testing, ExcelJS, and 3 new tile types (v0.3.0)
Testing Framework Migration (Vitest → Deno):
- Converted tests/constants.test.js to Deno format
- Converted tests/tile-renderer.test.js to Deno format
- Replaced Vitest assertions with Deno (assertEquals, assert)
- Updated package.json scripts to use 'deno test'
- Removed vitest.config.js and tests/setup.js
- Removed 4 Vitest dependencies from package.json

Excel Library Upgrade (SheetJS → ExcelJS):
- Rewrote js/utils/excel-handler.js to use ExcelJS v4.4.0
- Updated index-simple.html to load ExcelJS CDN
- Made exportToExcel async in 3 view files:
  * js/views/graphs-view-simple.js
  * js/views/dashboard-view-simple.js
  * js/views/data-view-simple.js
- Added styled headers (bold, blue background) to exports

3 New SAP Fiori Tile Types:
- Progress Tile: Goal tracking with animated gradient progress bar
  * Shimmer animation effect
  * Percentage display
  * Dynamic width based on completion
- Notification Tile: Badge with count and pulse animation
  * Pulsing badge (2s animation cycle)
  * Red notification dot indicator
  * Orange gradient on hover
- Timeline Tile: Activity feed with colored status dots
  * Success (green), Warning (orange), Error (red) states
  * Vertical timeline with dots
  * Recent activity display

Code Quality Improvements:
- Removed duplicate Numeric Content tile (was showing type twice)
- Added ~240 lines of CSS for 3 new tile types
- Total tile types: 11 → 14 (+27%)

Documentation Updates:
- Updated README.md: SheetJS → ExcelJS, added Deno Test
- Updated docs/VERSION.md with v0.3.0 release notes
- Updated package.json to v0.3.0
- Updated tiles-view-simple.js reference section (14 types)

Statistics:
- Files modified: 10
- Files removed: 2 (vitest config files)
- Test files converted: 2
- New tile types: 3
- New CSS animations: 2 (shimmer, pulse)
- Dependencies removed: 4 (vitest packages)

--- a/index-simple.html
+++ b/index-simple.html
@@ -6,7 +6,7 @@
   <title>Analytics Dashboard</title>
 
   <!-- External Libraries -->
-  <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <script src="https://unpkg.com/navigo@8.11.1/lib/navigo.min.js"></script>
 
@@ -940,6 +940,247 @@
     .link-list-more:hover {
       color: #064080;
       text-decoration: underline;
+    }
+
+    /* Progress Tile - Goal tracking with progress bar */
+    .sap-tile.progress {
+      min-height: 180px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .progress-tile-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+
+    .progress-tile-title {
+      font-size: 0.875rem;
+      font-weight: 600;
+      color: #333;
+    }
+
+    .progress-tile-icon {
+      font-size: 1.5rem;
+      opacity: 0.3;
+    }
+
+    .progress-tile-metrics {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      margin-bottom: 0.5rem;
+    }
+
+    .progress-current {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #0854a0;
+    }
+
+    .progress-goal {
+      font-size: 1rem;
+      color: #666;
+    }
+
+    .progress-bar-container {
+      width: 100%;
+      height: 12px;
+      background: #f0f0f0;
+      border-radius: 6px;
+      overflow: hidden;
+      margin: 0.75rem 0;
+    }
+
+    .progress-bar-fill {
+      height: 100%;
+      background: linear-gradient(90deg, #0854a0 0%, #107e3e 100%);
+      border-radius: 6px;
+      transition: width 0.5s ease;
+      position: relative;
+    }
+
+    .progress-bar-fill::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(90deg, transparent 0%, rgba(255,255,255,0.3) 50%, transparent 100%);
+      animation: shimmer 2s infinite;
+    }
+
+    @keyframes shimmer {
+      0% { transform: translateX(-100%); }
+      100% { transform: translateX(100%); }
+    }
+
+    .progress-percentage {
+      text-align: center;
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #0854a0;
+      margin-top: 0.5rem;
+    }
+
+    .progress-footer {
+      font-size: 0.7rem;
+      color: #999;
+      text-align: center;
+      margin-top: 0.5rem;
+    }
+
+    /* Notification Tile - Badge with count */
+    .sap-tile.notification {
+      min-height: 160px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position: relative;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    .sap-tile.notification:hover {
+      background: linear-gradient(135deg, #ffffff 0%, #fff3e0 100%);
+      transform: translateY(-4px);
+      box-shadow: 0 6px 16px rgba(226, 104, 0, 0.15);
+    }
+
+    .notification-badge {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: #e26800;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 8px rgba(226, 104, 0, 0.3);
+      position: relative;
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+    }
+
+    .notification-badge::after {
+      content: '';
+      position: absolute;
+      top: -4px;
+      right: -4px;
+      width: 20px;
+      height: 20px;
+      background: #bb0000;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
+
+    .notification-title {
+      font-size: 1rem;
+      font-weight: 600;
+      color: #333;
+      margin-bottom: 0.5rem;
+    }
+
+    .notification-subtitle {
+      font-size: 0.75rem;
+      color: #666;
+    }
+
+    /* Timeline Tile - Activity feed */
+    .sap-tile.timeline {
+      min-height: 200px;
+      padding: 1rem;
+    }
+
+    .timeline-header {
+      font-size: 0.875rem;
+      font-weight: 600;
+      color: #0854a0;
+      margin-bottom: 1rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 2px solid #e3f2fd;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .timeline-items {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
+
+    .timeline-item {
+      display: grid;
+      grid-template-columns: 40px 1fr;
+      gap: 0.75rem;
+      padding-bottom: 0.75rem;
+      border-left: 2px solid #e3f2fd;
+      position: relative;
+    }
+
+    .timeline-item:last-child {
+      border-left: none;
+    }
+
+    .timeline-dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: #0854a0;
+      position: absolute;
+      left: -7px;
+      top: 4px;
+      border: 2px solid white;
+      box-shadow: 0 0 0 2px #e3f2fd;
+    }
+
+    .timeline-item.timeline-success .timeline-dot {
+      background: #107e3e;
+    }
+
+    .timeline-item.timeline-warning .timeline-dot {
+      background: #e26800;
+    }
+
+    .timeline-item.timeline-error .timeline-dot {
+      background: #bb0000;
+    }
+
+    .timeline-time {
+      font-size: 0.65rem;
+      color: #999;
+      padding-left: 0.5rem;
+      padding-top: 0.25rem;
+    }
+
+    .timeline-content {
+      padding-left: 0;
+    }
+
+    .timeline-content-text {
+      font-size: 0.8rem;
+      color: #333;
+      line-height: 1.4;
+      margin-bottom: 0.25rem;
+    }
+
+    .timeline-content-meta {
+      font-size: 0.7rem;
+      color: #666;
     }
   </style>
 </head>
