--- a/index-simple.html
+++ b/index-simple.html
@@ -1197,6 +1197,7 @@
       <div class="nav-item active" data-route="/upload">📤 Upload</div>
       <div class="nav-item" data-route="/dashboard">📈 Dashboard</div>
       <div class="nav-item" data-route="/graphs">📊 Graphs</div>
+      <div class="nav-item" data-route="/chart-types">📉 Chart Types</div>
       <div class="nav-item" data-route="/tiles">🎨 Tiles</div>
       <div class="nav-item" data-route="/data">📋 Data Table</div>
       <div class="nav-item" data-route="/about">ℹ️ About</div>
