Remove Graphs page, rename to SAP Tiles, add design principles
Changes:
- Deleted Graphs page (charts-view-simple.js functionality replaced by chart-types page)
- Removed /graphs route from constants and router
- Renamed "Tiles" to "SAP Tiles" in navigation menu
- Updated tile actions from 'graphs' to 'chart-types'
- Added Design Principles section to README.md:
  - UI5 Web Components for shell, tiles, cards, forms
  - Classic OpenUI5 for tables only
  - Chart.js for visualizations
  - Pure CSS for custom styling
- Updated Credits: SheetJS → ExcelJS

Navigation pages: 9 → 8

--- a/index-simple.html
+++ b/index-simple.html
@@ -1450,9 +1450,8 @@
     <div class="sidebar">
       <div class="nav-item active" data-route="/upload">📤 Upload</div>
       <div class="nav-item" data-route="/dashboard">📈 Dashboard</div>
-      <div class="nav-item" data-route="/graphs">📊 Graphs</div>
       <div class="nav-item" data-route="/chart-types">📉 Chart Types</div>
-      <div class="nav-item" data-route="/tiles">🎨 Tiles</div>
+      <div class="nav-item" data-route="/tiles">🎨 SAP Tiles</div>
       <div class="nav-item" data-route="/sap-icons">✨ SAP Icons</div>
       <div class="nav-item" data-route="/sap-colors">🎨 SAP Colors</div>
       <div class="nav-item" data-route="/data">📋 Data Table</div>
