Add UI5 Components showcase & replace Navigo with OpenUI5 Router
New Features:
- UI5 Components Showcase page with 4 component types:
  - 3 ui5-card examples (Project Status, Team Metrics, System Health)
  - 3 ui5-input examples (Username, Email, Search)
  - 3 Analytical Cards (Revenue, Active Users, Conversion Rate)
  - 3 ui5-shellbar variations (Full-featured, Simple, With Branding)
- Added UI5 Web Components loading to app-simple.js
- Loaded components: Card, Input, AnalyticalCard, ShellBar (v2.16.2)

Router Changes:
- Replaced Navigo router with OpenUI5 HashChanger
- Added OpenUI5 Core library (sap-ui-core.js) from OpenUI5 CDN
- Implemented async router initialization with OpenUI5 ready check
- Maintained same routing API and all existing routes

Technical Changes:
- Created js/views/ui5-components-view-simple.js (400+ lines)
- Updated index-simple.html: Removed Navigo, added OpenUI5 bootstrap
- Added CSS for UI5 components showcase and analytical cards
- Added /ui5-components route and navigation item
- Deleted unused graphs-view-simple.js file
- Updated README.md with new tech stack and features

Design Principles Confirmed:
- UI5 Web Components for shell, tiles, cards, forms ✅
- Classic OpenUI5 for routing (HashChanger) ✅
- Chart.js for visualizations ✅

Statistics:
- Navigation pages: 8 → 9
- UI5 Components showcased: 4 types (12 examples total)
- Lines of code added: ~500

--- a/index-simple.html
+++ b/index-simple.html
@@ -8,7 +8,18 @@
   <!-- External Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-  <script src="https://unpkg.com/navigo@8.11.1/lib/navigo.min.js"></script>
+
+  <!-- OpenUI5 Core for Routing -->
+  <script
+    id="sap-ui-bootstrap"
+    src="https://sdk.openui5.org/resources/sap-ui-core.js"
+    data-sap-ui-theme="sap_horizon"
+    data-sap-ui-libs="sap.ui.core"
+    data-sap-ui-compatVersion="edge"
+    data-sap-ui-async="true"
+    data-sap-ui-preload="async"
+    data-sap-ui-xx-waitForTheme="true">
+  </script>
 
   <!-- Styles -->
   <style>
@@ -1436,6 +1447,75 @@
     .copy-palette-btn:hover {
       background: #064080;
     }
+
+    /* UI5 Components Showcase Styles */
+    .demo-card {
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .demo-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+    }
+
+    .ui5-card-header {
+      border-bottom: 1px solid #e0e0e0;
+    }
+
+    .analytical-card-wrapper {
+      background: white;
+      border: 1px solid #e0e0e0;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .analytical-card {
+      padding: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .analytical-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+
+    .analytical-title {
+      font-size: 1rem;
+      font-weight: 600;
+      color: #333;
+    }
+
+    .analytical-subtitle {
+      font-size: 0.875rem;
+      color: #666;
+      margin-top: 0.25rem;
+    }
+
+    .analytical-value {
+      padding: 0.5rem 0;
+    }
+
+    .analytical-chart {
+      margin-top: 0.5rem;
+    }
+
+    /* UI5 Input Customization */
+    ui5-input {
+      --sapField_BorderColor: #89919a;
+      --sapField_Hover_BorderColor: #0854a0;
+      --sapField_Focus_BorderColor: #0854a0;
+    }
+
+    /* UI5 ShellBar Customization */
+    ui5-shellbar {
+      --sapShellBar_Background: #0854a0;
+      --sapShellBar_TextColor: #ffffff;
+    }
   </style>
 </head>
 <body>
@@ -1452,6 +1532,7 @@
       <div class="nav-item" data-route="/dashboard">📈 Dashboard</div>
       <div class="nav-item" data-route="/chart-types">📉 Chart Types</div>
       <div class="nav-item" data-route="/tiles">🎨 SAP Tiles</div>
+      <div class="nav-item" data-route="/ui5-components">🎯 UI5 Components</div>
       <div class="nav-item" data-route="/sap-icons">✨ SAP Icons</div>
       <div class="nav-item" data-route="/sap-colors">🎨 SAP Colors</div>
       <div class="nav-item" data-route="/data">📋 Data Table</div>
