--- a/index-simple.html
+++ b/index-simple.html
@@ -22,6 +22,13 @@
     data-sap-ui-xx-waitForTheme="true">
   </script>
 
+  <!-- UI5 Web Components -->
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ui5/webcomponents@2.0.0/dist/Assets.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ui5/webcomponents@2.0.0/dist/Card.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ui5/webcomponents@2.0.0/dist/Input.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ui5/webcomponents-fiori@2.0.0/dist/Assets.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ui5/webcomponents-fiori@2.0.0/dist/ShellBar.js"></script>
+
   <!-- Styles -->
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
