Complete migration to SAPUI5 MVC architecture with FlexibleColumnLayout
This is a major refactoring that migrates the application from a simple CDN-based
UI5 Web Components architecture to a full SAPUI5 MVC application with proper
component-based structure and FlexibleColumnLayout navigation pattern.

## Architecture Changes

- Migrated from UI5 Web Components v2 to SAPUI5 1.108+
- Implemented full MVC (Model-View-Controller) pattern
- Added FlexibleColumnLayout for SAP Fiori 3-column responsive navigation
- Converted all views from JavaScript template literals to XML views
- Created proper controller classes for all views
- Implemented sap.f.routing.Router for FlexibleColumnLayout routing

## New Structure

- webapp/
  - Component.js - Root UI component with initialization
  - manifest.json - Application descriptor with routing configuration
  - controller/ - All MVC controllers
  - view/ - All XML views
  - css/style.css - Application styles with FCL layout fixes
  - i18n/ - Internationalization resource bundles

## Views Created

- App.view.xml - Root view with FlexibleColumnLayout
- Master.view.xml - Navigation sidebar
- Upload.view.xml - File upload page
- Dashboard.view.xml - Analytics dashboard
- Data.view.xml - Data table view
- DataDetail.view.xml - Row detail drill-down
- ChartTypes.view.xml - Chart types showcase
- Tiles.view.xml - SAP Fiori tiles showcase
- Ui5Components.view.xml - UI5 components gallery
- SapIcons.view.xml - SAP icons browser
- SapColors.view.xml - Color palette explorer
- About.view.xml - About page
- NotFound.view.xml - 404 error page

## Controllers Created

Corresponding controllers for all views with proper initialization,
navigation logic, and event handlers.

## Key Fixes

1. **FileUploader Issue**: Fixed import from sap.m to sap.ui.unified
2. **ExcelJS API**: Updated to use promise-based xlsx.load() method
3. **XML Parsing**: URL-encoded SVG data URIs in Master view
4. **Routing Configuration**: Properly configured FlexibleColum

--- a/webapp/index-simple.html
+++ b/webapp/index-simple.html
@@ -1541,6 +1541,32 @@
       --sapShellBar_Background: #0854a0;
       --sapShellBar_TextColor: #ffffff;
     }
+
+    /* ========================================
+       DEBUG STYLES - FOR DIAGNOSING RENDERING ISSUE
+       REMOVE AFTER FIXING
+       ======================================== */
+    #content {
+      background: rgba(0, 255, 0, 0.1) !important; /* Lime tint - visible if element renders */
+      min-height: 500px !important;
+      border: 5px solid red !important;
+    }
+
+    #content > * {
+      border: 1px dotted blue !important; /* Show all direct children */
+    }
+
+    #content .card {
+      background: rgba(255, 255, 0, 0.3) !important; /* Yellow highlight for cards */
+    }
+
+    /* Force visibility */
+    .content {
+      display: block !important;
+      visibility: visible !important;
+      opacity: 1 !important;
+    }
+    /* ======================================== */
   </style>
 </head>
 <body>
